adding basic Model, controller and html function

--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <h1>PICK YOUR POISON</h1>
-    <p>Link to another XML <a href="/Function">here</a></p>
     <p> Info regarding the site </p>
+    <p>Link to Whiskey <a href="/Whiskey-form">here</a></p>
+
 </body>
 </html>
