Byrja á css á index

--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE HTML>
 <html>
 <link rel="stylesheet" href="style.css">
-<head> 
-    <title>Getting Started: Serving Web Content</title> 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<head>
+    <title>Getting Started: Serving Web Content</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<h1>PICK YOUR POISON</h1>
-    <p> Info regarding the site </p>
-    <p>Link to Whiskey <a href="/Whiskey-form">here</a></p>
 
+<div class="top-header header">
+    <h1>PICK YOUR POISON</h1>
+
+</div>
+<div class="main-container">
+    <h2>Welcome to Pick your poison</h2>
+    <div class="link-container">
+        <a class="link" href="/Whiskey-form">
+            <div class="link-div">
+
+            </div>
+        </a>
+    </div>
+</div>
 </body>
 </html>
